--- a/Acad_SheetSet/packages.config
+++ b/Acad_SheetSet/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ControlzEx" version="3.0.2.4" targetFramework="net452" />
+  <package id="CsvHelper" version="7.1.0" targetFramework="net452" />
   <package id="Fody" version="3.0.3" targetFramework="net452" developmentDependency="true" />
   <package id="JetBrains.Annotations" version="11.1.0" targetFramework="net452" />
   <package id="MahApps.Metro" version="1.6.1" targetFramework="net452" />
