--- a/Acad_SheetSet/packages.config
+++ b/Acad_SheetSet/packages.config
@@ -5,7 +5,7 @@
   <package id="Fody" version="3.0.3" targetFramework="net452" developmentDependency="true" />
   <package id="JetBrains.Annotations" version="11.1.0" targetFramework="net452" />
   <package id="MahApps.Metro" version="1.6.1" targetFramework="net452" />
-  <package id="MahApps.Metro.IconPacks" version="2.2.0" targetFramework="net452" />
+  <package id="MahApps.Metro.IconPacks" version="2.2.0" targetFramework="net452" requireReinstallation="true" />
   <package id="PropertyChanged.Fody" version="2.5.4" targetFramework="net452" />
   <package id="reactiveui" version="7.4.0" targetFramework="net452" />
   <package id="reactiveui-core" version="7.4.0" targetFramework="net452" />
