--- a/MigrationBackup/91e91592/Acad_SheetSet_v2016/packages.config
+++ b/MigrationBackup/91e91592/Acad_SheetSet_v2016/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ControlzEx" version="3.0.2.4" targetFramework="net452" />
+  <package id="ControlzEx" version="3.0.2.4" targetFramework="net452" requireReinstallation="true" />
   <package id="CsvHelper" version="7.1.0" targetFramework="net452" />
   <package id="Fody" version="3.0.3" targetFramework="net452" developmentDependency="true" />
   <package id="JetBrains.Annotations" version="11.1.0" targetFramework="net452" />
