--- a/MigrationBackup/a7eb10f2/Acad_SheetSet_v2016/packages.config
+++ b/MigrationBackup/a7eb10f2/Acad_SheetSet_v2016/packages.config
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ControlzEx" version="3.0.2.4" targetFramework="net452" />
-  <package id="CsvHelper" version="7.1.0" targetFramework="net452" />
-  <package id="Fody" version="3.0.3" targetFramework="net452" developmentDependency="true" />
+  <package id="ControlzEx" version="3.0.2.4" targetFramework="net452" requireReinstallation="true" />
+  <package id="CsvHelper" version="7.1.1" targetFramework="net452" />
+  <package id="Fody" version="3.1.3" targetFramework="net452" developmentDependency="true" />
   <package id="JetBrains.Annotations" version="11.1.0" targetFramework="net452" />
-  <package id="MahApps.Metro" version="1.6.1" targetFramework="net452" />
-  <package id="MahApps.Metro.IconPacks" version="2.2.0" targetFramework="net452" requireReinstallation="true" />
-  <package id="PropertyChanged.Fody" version="2.5.4" targetFramework="net452" />
+  <package id="MahApps.Metro" version="1.6.5" targetFramework="net452" requireReinstallation="true" />
+  <package id="MahApps.Metro.IconPacks" version="2.3.0" targetFramework="net452" requireReinstallation="true" />
+  <package id="PropertyChanged.Fody" version="2.5.8" targetFramework="net452" />
   <package id="reactiveui" version="7.4.0" targetFramework="net452" />
   <package id="reactiveui-core" version="7.4.0" targetFramework="net452" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net452" />
