--- a/Acad_SheetSet/Acad_SheetSet_v2018.csproj
+++ b/Acad_SheetSet/Acad_SheetSet_v2018.csproj
@@ -37,26 +37,7 @@
     <PlatformTarget>x64</PlatformTarget>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="AcCoreMgd">
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="AcMgd">
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="AcDbMgd">
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="AcadLib">
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="AutoCAD_PIK_Settings">
-      <HintPath>..\..\..\..\Autodesk\AutoCAD\Pik\Settings\Dll\AutoCAD_PIK_Settings.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="NetLib">
-      <Private>False</Private>
-    </Reference>
+  <ItemGroup>    
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
@@ -133,36 +114,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="CsvHelper">
-      <Version>7.1.1</Version>
-    </PackageReference>
-    <PackageReference Include="Fody">
-      <Version>3.1.3</Version>
-    </PackageReference>
-    <PackageReference Include="JetBrains.Annotations">
-      <Version>11.1.0</Version>
-    </PackageReference>
-    <PackageReference Include="MahApps.Metro">
-      <Version>1.6.5</Version>
-    </PackageReference>
-    <PackageReference Include="MahApps.Metro.IconPacks">
-      <Version>2.3.0</Version>
-    </PackageReference>
-    <PackageReference Include="PropertyChanged.Fody">
-      <Version>2.5.8</Version>
-    </PackageReference>
-    <PackageReference Include="reactiveui">
-      <Version>8.3.1</Version>
-    </PackageReference>
-    <PackageReference Include="Rx-XAML">
-      <Version>2.2.5</Version>
-    </PackageReference>
-    <PackageReference Include="Splat">
-      <Version>4.0.0</Version>
-    </PackageReference>
-  </ItemGroup>
+  </ItemGroup>  
   <ItemGroup>
     <COMReference Include="ACSMCOMPONENTS22Lib">
       <Guid>{50C66F2D-C80E-45B4-A7F8-C8E26C664D0E}</Guid>
@@ -184,27 +136,8 @@
     </COMReference>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CsvHelper">
-      <Version>7.1.0</Version>
-    </PackageReference>
-    <PackageReference Include="Fody">
-      <Version>3.0.3</Version>
-    </PackageReference>
-    <PackageReference Include="JetBrains.Annotations">
-      <Version>11.1.0</Version>
-    </PackageReference>
-    <PackageReference Include="MahApps.Metro">
-      <Version>1.6.4</Version>
-    </PackageReference>
-    <PackageReference Include="MahApps.Metro.IconPacks">
-      <Version>2.2.0</Version>
-    </PackageReference>
-    <PackageReference Include="PropertyChanged.Fody">
-      <Version>2.5.6</Version>
-    </PackageReference>
-    <PackageReference Include="reactiveui">
-      <Version>8.2.1</Version>
-    </PackageReference>
+    <PackageReference Include="AcadLib" version="1.0.0"/>
+    <PackageReference Include="NetLib" version="1.1.13"/>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
