--- a/Acad_SheetSet/Acad_SheetSet_v2018.csproj
+++ b/Acad_SheetSet/Acad_SheetSet_v2018.csproj
@@ -30,14 +30,14 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\..\..\Autodesk\AutoCAD\Pik\Settings\Script\NET\</OutputPath>
+    <OutputPath>..\..\..\..\Autodesk\AutoCAD\Pik\Settings\Script\NET\SheetSet\</OutputPath>
     <DefineConstants>TRACE;v2018</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x64</PlatformTarget>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
-  <ItemGroup>    
+  <ItemGroup>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
@@ -114,7 +114,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-  </ItemGroup>  
+  </ItemGroup>
   <ItemGroup>
     <COMReference Include="ACSMCOMPONENTS22Lib">
       <Guid>{50C66F2D-C80E-45B4-A7F8-C8E26C664D0E}</Guid>
@@ -123,7 +123,8 @@
       <Lcid>0</Lcid>
       <WrapperTool>tlbimp</WrapperTool>
       <Isolated>False</Isolated>
-      <EmbedInteropTypes>True</EmbedInteropTypes>
+      <EmbedInteropTypes>False</EmbedInteropTypes>
+      <Private>True</Private>
     </COMReference>
     <COMReference Include="AXDBLib">
       <Guid>{1B47FC7F-AFF7-44A9-88BE-873CC5B70A6E}</Guid>
@@ -132,12 +133,13 @@
       <Lcid>0</Lcid>
       <WrapperTool>tlbimp</WrapperTool>
       <Isolated>False</Isolated>
-      <EmbedInteropTypes>True</EmbedInteropTypes>
+      <EmbedInteropTypes>False</EmbedInteropTypes>
+      <Private>True</Private>
     </COMReference>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="AcadLib" version="1.0.0"/>
-    <PackageReference Include="NetLib" version="1.1.13"/>
+    <PackageReference Include="AcadLib" version="1.0.0" ExcludeAssets="runtime;build" />
+    <PackageReference Include="NetLib" version="1.1.13" ExcludeAssets="runtime;build" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
