--- a/Acad_SheetSet/Acad_SheetSet_v2017.csproj
+++ b/Acad_SheetSet/Acad_SheetSet_v2017.csproj
@@ -136,8 +136,11 @@
     </COMReference>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="AcadLib" version="1.0.0" ExcludeAssets="runtime;build" />
-    <PackageReference Include="NetLib" version="1.1.13" ExcludeAssets="runtime;build" />
+    <PackageReference Include="AcadLib" Version="1.1.38" ExcludeAssets="runtime;build" />
+    <PackageReference Include="NetLib" Version="1.1.67" ExcludeAssets="runtime;build" />
+    <PackageReference Update="Nerdbank.GitVersioning" Version="2.2.33" />
+    <PackageReference Update="Fody" Version="3.3.0" />
+    <PackageReference Update="PropertyChanged.Fody" Version="2.5.14" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
