--- a/Acad_SheetSet/Acad_SheetSet_v2017.csproj
+++ b/Acad_SheetSet/Acad_SheetSet_v2017.csproj
@@ -7,9 +7,10 @@
     <ProjectGuid>{F82560E5-BADA-4EB3-88DC-E4044ABC6FDA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
+    <CodeAnalysisRuleSet>..\stylecop.ruleset</CodeAnalysisRuleSet>
     <RootNamespace>Acad_SheetSet</RootNamespace>
     <AssemblyName>Acad_SheetSet_v2017</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <NuGetPackageImportStamp>
@@ -20,7 +21,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\..\..\Autodesk\AutoCAD\Pik\Settings\Script\NET\</OutputPath>
+    <OutputPath>c:\Autodesk\AutoCAD\Pik\Settings\Script\NET\SheetSet\</OutputPath>
     <DefineConstants>TRACE;DEBUG;v2017</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -30,12 +31,12 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\..\..\Autodesk\AutoCAD\Pik\Settings\Script\NET\SheetSet\</OutputPath>
+    <OutputPath>c:\Autodesk\AutoCAD\Pik\Settings\Script\NET\SheetSet\</OutputPath>
     <DefineConstants>TRACE;v2017</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x64</PlatformTarget>
-    <LangVersion>latest</LangVersion>
+    <LangVersion>8</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PresentationCore" />
@@ -136,11 +137,10 @@
     </COMReference>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="AcadLib" Version="1.1.38" ExcludeAssets="runtime;build" />
-    <PackageReference Include="NetLib" Version="1.1.67" ExcludeAssets="runtime;build" />
-    <PackageReference Update="Nerdbank.GitVersioning" Version="2.2.33" />
-    <PackageReference Update="Fody" Version="3.3.0" />
-    <PackageReference Update="PropertyChanged.Fody" Version="2.5.14" />
+    <PackageReference Include="AcadLib" Version="1.1.116" ExcludeAssets="runtime;build" />
+    <PackageReference Include="NetLib" Version="1.1.119" ExcludeAssets="runtime;build" />
+    <PackageReference Include="Fody" Version="4.0.2" />
+    <PackageReference Include="PropertyChanged.Fody" Version="2.6.0" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
