--- a/Acad_SheetSet/Acad_SheetSet_v2019.csproj
+++ b/Acad_SheetSet/Acad_SheetSet_v2019.csproj
@@ -8,8 +8,9 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Acad_SheetSet</RootNamespace>
-    <AssemblyName>Acad_SheetSet_v2018</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
+    <AssemblyName>Acad_SheetSet_v2019</AssemblyName>
+    <CodeAnalysisRuleSet>..\stylecop.ruleset</CodeAnalysisRuleSet>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <NuGetPackageImportStamp>
@@ -20,8 +21,8 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\..\..\Autodesk\AutoCAD\Pik\Settings\Script\NET\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;v2018</DefineConstants>
+    <OutputPath>c:\Autodesk\AutoCAD\Pik\Settings\Script\NET\SheetSet\</OutputPath>
+    <DefineConstants>TRACE;DEBUG;v2019</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x64</PlatformTarget>
@@ -30,12 +31,12 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\..\..\Autodesk\AutoCAD\Pik\Settings\Script\NET\SheetSet\</OutputPath>
-    <DefineConstants>TRACE;v2018</DefineConstants>
+    <OutputPath>c:\Autodesk\AutoCAD\Pik\Settings\Script\NET\SheetSet\</OutputPath>
+    <DefineConstants>TRACE;v2019</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x64</PlatformTarget>
-    <LangVersion>latest</LangVersion>
+    <LangVersion>8</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PresentationCore" />
@@ -116,33 +117,21 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <COMReference Include="ACSMCOMPONENTS22Lib">
-      <Guid>{50C66F2D-C80E-45B4-A7F8-C8E26C664D0E}</Guid>
-      <VersionMajor>1</VersionMajor>
-      <VersionMinor>0</VersionMinor>
-      <Lcid>0</Lcid>
-      <WrapperTool>tlbimp</WrapperTool>
-      <Isolated>False</Isolated>
-      <EmbedInteropTypes>False</EmbedInteropTypes>
-      <Private>True</Private>
-    </COMReference>
-    <COMReference Include="AXDBLib">
-      <Guid>{1B47FC7F-AFF7-44A9-88BE-873CC5B70A6E}</Guid>
-      <VersionMajor>1</VersionMajor>
-      <VersionMinor>0</VersionMinor>
-      <Lcid>0</Lcid>
-      <WrapperTool>tlbimp</WrapperTool>
-      <Isolated>False</Isolated>
-      <EmbedInteropTypes>False</EmbedInteropTypes>
-      <Private>True</Private>
-    </COMReference>
+    <PackageReference Include="AcadLib" Version="1.1.116" ExcludeAssets="runtime;build" />
+    <PackageReference Include="NetLib" Version="1.1.119" ExcludeAssets="runtime;build" />
+    <PackageReference Include="Fody" Version="4.0.2" />
+    <PackageReference Include="PropertyChanged.Fody" Version="2.6.0" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="AcadLib" Version="1.1.38" ExcludeAssets="runtime;build" />
-    <PackageReference Include="NetLib" Version="1.1.67" ExcludeAssets="runtime;build" />
-    <PackageReference Update="Nerdbank.GitVersioning" Version="2.2.33" />
-    <PackageReference Update="Fody" Version="3.3.0" />
-    <PackageReference Update="PropertyChanged.Fody" Version="2.5.14" />
+    <COMReference Include="ACSMCOMPONENTS23Lib">
+      <Guid>{6243505A-A1A6-4EAA-84BB-F9F8173C54BB}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>0</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>tlbimp</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>False</EmbedInteropTypes>
+    </COMReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
