--- a/Acad_SheetSet/Acad_SheetSet_v2017.csproj
+++ b/Acad_SheetSet/Acad_SheetSet_v2017.csproj
@@ -133,10 +133,17 @@
     </COMReference>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="AcadLib" Version="1.2.123" ExcludeAssets="runtime;build" />
-    <PackageReference Include="NetLib" Version="1.1.123" ExcludeAssets="runtime;build" />
-    <PackageReference Include="Fody" Version="4.0.2" />
-    <PackageReference Include="PropertyChanged.Fody" Version="2.6.0" />
+    <PackageReference Include="BimLab.Metro" Version="1.0.1" />
+    <PackageReference Include="CsvHelper" Version="18.0.0" />
+    <PackageReference Include="Fody" Version="6.3.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="MahApps.Metro.IconPacks.Material" Version="4.8.0" />
+    <PackageReference Include="Micro_MVVM" Version="1.0.0" />
+    <PackageReference Include="ModPlus.AutoCAD.API.2019" Version="1.0.0" ExcludeAssets="build;runtime" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="PropertyChanged.Fody" Version="3.3.1" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
